should be funcitoning for one aoi

--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,24 @@
-@web_page{,
-   title = {Layer: Other Road (ID: 26)},
-   url = {https://geospatial.alberta.ca/titan/rest/services/utility/access/MapServer/26},
+
+@online{government_of_alberta_layer_nodate,
+	title = {Layer: Other Road ({ID}: 26)},
+	url = {https://geospatial.alberta.ca/titan/rest/services/utility/access/MapServer/26},
+	author = {Government of Alberta},
+	urldate = {2022-03-16},
+	file = {Layer\: Other Road (ID\: 26):C\:\\Users\\lbuchner\\Zotero\\storage\\66GLM7CM\\26.html:text/html},
 }
-@web_page{,
-   title = {Layer: Gravel Road (20K) (ID: 23)},
-   url = {https://geospatial.alberta.ca/titan/rest/services/utility/access/MapServer/23},
+
+@online{government_of_alberta_layer_nodate-1,
+	title = {Layer: Gravel Road (20K) ({ID}: 23)},
+	url = {https://geospatial.alberta.ca/titan/rest/services/utility/access/MapServer/23},
+	author = {Government of Alberta},
+	urldate = {2022-03-16},
+	file = {Layer\: Gravel Road (20K) (ID\: 23):C\:\\Users\\lbuchner\\Zotero\\storage\\FIILAHUB\\23.html:text/html},
 }
-@web_page{,
-   title = {Layer: Paved Road (20K) (ID: 14)},
-   url = {https://geospatial.alberta.ca/titan/rest/services/utility/access/MapServer/14},
+
+@online{government_of_alberta_layer_nodate-2,
+	title = {Layer: Paved Road (20K) ({ID}: 14)},
+	url = {https://geospatial.alberta.ca/titan/rest/services/utility/access/MapServer/14},
+	author = {Government of Alberta},
+	urldate = {2022-03-16},
+	file = {Layer\: Paved Road (20K) (ID\: 14):C\:\\Users\\lbuchner\\Zotero\\storage\\WSL3ADT5\\14.html:text/html},
 }
