--- a/Analysis of the Heli-GPS Data.rmd
+++ b/Analysis of the Heli-GPS Data.rmd
@@ -3,9 +3,8 @@ title: Heli-GPS Analysis in the Context of Mountain Pine Beetle
 author: Leonard Buechner
 date: '`r format(Sys.Date())`'
 bibliography: references.bib 
-biblio-style: apa
 link-citations: true
-# csl: apa.csl
+csl: apa.csl
 output:
   md_document:
     variant: gfm
@@ -15,12 +14,12 @@ output:
 # Analysis of the Heli-GPS Data
 
 ## Introduction and Data
-Most trees will have lost all needles, classifying as grey-attack, three years after they have been attacked by the Mountain Pine Beetle (MPB). When measuring LiDAR data at the end of March, al green-attack trees that have been attacked in 2019 and before, as well as all red-attack trees detected in 2020 and before, will now classify as grey attack. Of those treees that have been detected as re-attack in 2021, some will still classify as red-attack and others as grey-attack. This is due to the fact that the heli-GPS data provided by the government of Alberta cannot distinguish between different years of red-attack.
+After lodgepole pines (Pinus contorta) have been attacked by Mountain Pine Beetle (MPB), they show different stages. The needles of attacked trees wil turn from green over yellow to red within the first 12 months (red-attack). It then takes in between 1-3 years until all needles have fallen to the ground, when the trees remain standing but without needles (grey-attack) [@wulderRemoteSensingSurvey2005]. Depending on the type of stand, according to @mitchellFallRateLodgepole199, dead trees begin to fall after 3 to 5 years and 80 - 90 % of trees had fallen after 11 years. 
+This leads to different stages of beetle attack that will be considered in this study. All green-attack trees detected in 2021 nad 2020 are now with high probability in the red-attack stage. Some of the trees that have been detected as red-attack in 2021, will still classify as red-attack and others as grey-attack. A clear distinction based on time of detection is not possible without additional data, since it can take several years before all needles have fallen of the tree, the GPS locations of MPB-attacked trees provided by the government of Alberta [@wulderRemoteSensingSurvey2005]. Collecting the LiDAR data at the end of May, all green-attack trees that have been attacked in 2019 and before, as well as all red-attack trees detected in 2020 and before, will now classify as grey attack. Additionally, it can be expected that most of the trees that have been detected as red-attack in 2011 and before, now have fallen to the ground [@schoennagelEffectsMountainPine2012].
 
-The roads are downloaded from several pages that I will have to cite here.
-Flight locataions with the drone need to be accessable from the road for efficient data collection. As the drone has to stay in line of sight, it is not possible to fly far from the road.
-Reachable areas will be defined through a buffer zone around paved and gravel roads as known from 
-[@government_of_alberta_layer_nodate-1].
+Information on accessibility is based on the road network available through the government of Alberta [@GravelRoad2021; @PavedRoad2021], since all flight locations with the drone need to be accessible from the road for efficient data collection. As the drone has to stay in line of sight, it is not possible to fly far away from the road.
+
+
 
 # References
 
