--- a/Analysis of the Heli-GPS Data.rmd
+++ b/Analysis of the Heli-GPS Data.rmd
@@ -17,6 +17,11 @@ output:
 After lodgepole pines (Pinus contorta) have been attacked by Mountain Pine Beetle (MPB), they show different stages. The needles of attacked trees wil turn from green over yellow to red within the first 12 months (red-attack). It then takes in between 1-3 years until all needles have fallen to the ground, when the trees remain standing but without needles (grey-attack) [@wulderRemoteSensingSurvey2005]. Depending on the type of stand, according to @mitchellFallRateLodgepole199, dead trees begin to fall after 3 to 5 years and 80 - 90 % of trees had fallen after 11 years. 
 This leads to different stages of beetle attack that will be considered in this study. All green-attack trees detected in 2021 nad 2020 are now with high probability in the red-attack stage. Some of the trees that have been detected as red-attack in 2021, will still classify as red-attack and others as grey-attack. A clear distinction based on time of detection is not possible without additional data, since it can take several years before all needles have fallen of the tree, the GPS locations of MPB-attacked trees provided by the government of Alberta [@wulderRemoteSensingSurvey2005]. Collecting the LiDAR data at the end of May, all green-attack trees that have been attacked in 2019 and before, as well as all red-attack trees detected in 2020 and before, will now classify as grey attack. Additionally, it can be expected that most of the trees that have been detected as red-attack in 2011 and before, now have fallen to the ground [@schoennagelEffectsMountainPine2012].
 
+Three broad areas of interest have been selected based on availability of observed MPB attack in the years 2011, 2019, 2020, and 2021, while also having a dense network of paved roads and gravel roads. As already shown by various authors before, lodgepole pine (Pinus contorta) is the most commonly attacked by MPB, thus, areas where chosen, where lodgepole pine is one of the most dominant species. This information was based on a visual analysis of raser data containing the most dominant species in 30 m by 30 m grid cells.
+![Frequency of tree species within the surrounding area of each MPB survey point for the years 2011, 2019, 2020, and 2021]("graphics\freq_species_11_19_20_21.png")
+![Frequency how often each tree species was the most dominant within one cell for each area of interest and cumulative.]("graphics/freq_species_19_20_21_cum.png")
+
+
 Information on accessibility is based on the road network available through the government of Alberta [@GravelRoad2021; @PavedRoad2021], since all flight locations with the drone need to be accessible from the road for efficient data collection. As the drone has to stay in line of sight, it is not possible to fly far away from the road.
 
 
