--- a/Analysis of the Heli-GPS Data.rmd
+++ b/Analysis of the Heli-GPS Data.rmd
@@ -6,8 +6,9 @@ bibliography: references.bib
 link-citations: true
 csl: apa.csl
 output:
-  md_document:
-    variant: gfm
+  bookdown::pdf_document2
+  # md_document:
+  #   variant: gfm
 ---
 
 
@@ -18,8 +19,14 @@ After lodgepole pines (Pinus contorta) have been attacked by Mountain Pine Beetl
 This leads to different stages of beetle attack that will be considered in this study. All green-attack trees detected in 2021 nad 2020 are now with high probability in the red-attack stage. Some of the trees that have been detected as red-attack in 2021, will still classify as red-attack and others as grey-attack. A clear distinction based on time of detection is not possible without additional data, since it can take several years before all needles have fallen of the tree, the GPS locations of MPB-attacked trees provided by the government of Alberta [@wulderRemoteSensingSurvey2005]. Collecting the LiDAR data at the end of May, all green-attack trees that have been attacked in 2019 and before, as well as all red-attack trees detected in 2020 and before, will now classify as grey attack. Additionally, it can be expected that most of the trees that have been detected as red-attack in 2011 and before, now have fallen to the ground [@schoennagelEffectsMountainPine2012].
 
 Three broad areas of interest have been selected based on availability of observed MPB attack in the years 2011, 2019, 2020, and 2021, while also having a dense network of paved roads and gravel roads. As already shown by various authors before, lodgepole pine (Pinus contorta) is the most commonly attacked by MPB, thus, areas where chosen, where lodgepole pine is one of the most dominant species. This information was based on a visual analysis of raser data containing the most dominant species in 30 m by 30 m grid cells.
-![Frequency of tree species within the surrounding area of each MPB survey point for the years 2011, 2019, 2020, and 2021]("graphics\freq_species_11_19_20_21.png")
-![Frequency how often each tree species was the most dominant within one cell for each area of interest and cumulative.]("graphics/freq_species_19_20_21_cum.png")
+The government of Alberta conducts annual Heli-GPS surveys, usually between August 15 and September 15 by flying helicopters at low hight and mapping the GPS locations of detected disturbances in therms of red- and green-attack through observers. These locations have a positional accuracy of =/- 30 m. In most cases only patches consisting of at least 3 trees are recorded. For the years under investigation, the minimum number of trees per patch were ___. For each of these locations the corresponding cell from the raster data containing the tree species is determined and with a box filter of 5 by 5 the most common tree species for each point can be determined. This analysis is performed for each of the three areas of interest and the results are shown in fig \@ref(fig:freq_species_11_19_20_21).
+```{r fig:freq_species_19_20_21_cum, fig.align = 'center', out.width = "50%", fig.cap = 'Frequency how often each tree species was the most dominant within one cell for each area of interest and cumulative.'}
+knitr::include_graphics("./graphics/freq_species_19_20_21_cum.png")
+```
+```{r fig:freq_species_11_19_20_21, fig.align = 'center', out.width = "100%", fig.cap='Frequency of tree species within the surrounding area of each MPB survey point for the years 2011, 2019, 2020, and 2021'}
+knitr::include_graphics("./graphics/freq_species_11_19_20_21.png")
+```
+
 
 
 Information on accessibility is based on the road network available through the government of Alberta [@GravelRoad2021; @PavedRoad2021], since all flight locations with the drone need to be accessible from the road for efficient data collection. As the drone has to stay in line of sight, it is not possible to fly far away from the road.
